--- a/Engelsk Nettside/HTML/Plan Your Trip.html
+++ b/Engelsk Nettside/HTML/Plan Your Trip.html
@@ -41,26 +41,15 @@
     </nav>
 
     <section class="hero">
-        <div class="image"><img src="../Bilder/Big-California-Nights.jpg" alt="California-Night"></div>
+        <div class="image"><img src="../Bilder/CaliForest.jpg" alt="California-Forest"></div>
         <div class="hero-card">
             <div class="hero-content">
                 <h1>Wondering Where to go?</h1>
-                <h2>This is the Best Place to Start!</h1>
+                <h2>Here is a list of destinations</h1>
             </div>
         </div>
-        <p>Image by&nbsp;<span class="freepix-link"><a href="https://www.freepik.com/free-photo/night-view-victoria-harbor-hong-kong_19075421.htm#position=3">Freepix</a></span></p>
+        <p>Images by&nbsp;<span class="freepix-link"><a href="https://www.freepik.com/free-photo/beautiful-shot-male-standing-rock-sequoia-national-park-california-usa_18813078.htm#fromView=keyword&page=1&position=1&uuid=fe1db69c-6ab7-487e-927e-895e983636c0" target="_blank">Freepix</a></span></p>
     </section>
-
-
-    <div class="Places-top">
-        <div class="Places-container-1">
-            <div class="Places-container-1-content">
-                <h1>WOW! So many places!</h1>
-                    
-            </div>
-        </div>
-    </div>
-
 
     <section class="travel-list">
 
@@ -72,7 +61,7 @@
                         <img src="../Bilder/jota-lao-Dxr6b44bhEQ-unsplash.jpg" alt="Yosemite National Park">
                     </a>
                     <h1>Yosemite National Park</h1>
-                    <p></p>
+                    <p>Yosemite National Park with has giant cliffs, large waterfalls and massive sequoia trees making it perfect for an outside person who loves hiking and seeing nature. On top of this, in the summer months it hosts the perfect conditions for rock climbing.</p>
                 </div>
             </div>
             
@@ -82,7 +71,7 @@
                         <img src="../Bilder/santa barbara img.jpg" alt="Golden Gate Bridge">
                     </a>
                     <h1>San Francisco</h1>
-                    <p></p>
+                    <p>San-Francisco, filled with round hills, history and the iconic Golden Gate Bridge its a city filled with charm and culture. Whether you'd choose to walk though the crowded city center, take a ferry out to sea, or just enjoy the beautiful views the city's mix of both scenery, history and modernity makes it a must visit for anyone planning to travel. </p>
                 </div>
             </div>
 
@@ -97,7 +86,7 @@
                         <img src="../Bilder/Los Angeles img.avif" alt="Hollywood Sign">
                     </a>
                     <h1>Los Angeles</h1>
-                    <p></p>
+                    <p>Los Angeles is THE city of the entertainment industry, where you can explore the glamour of Hollywood, stroll the  Walk of Fame, and visit famous landmarks. From sunny beaches to vibrant nightlife, LA offers endless possibilities for adventure and fun.</p>
                 </div>
             </div>
 
@@ -107,7 +96,7 @@
                         <img src="../Bilder/Napa Valley img.jpg" alt="Napa Valley">
                     </a>
                     <h1>Napa Valley</h1>
-                    <p></p>
+                    <p>Napa Valley is California’s wine center. with it offering both renowned wines and vineyard landscapes perfect for a relaxing escape. Enjoy wine tastings at picturesque estates, indulge in gourmet cuisine, or take a hot air balloon ride for unforgettable views of this beautiful region.</p>
                 </div>
             </div>
 
@@ -122,7 +111,8 @@
                         <img src="../Bilder/Lake Taho img.jpg" alt="Lake Tahoe">
                     </a>
                     <h1>Lake Tahoe</h1>
-                    <p></p>
+                    <p>Lake Tahoe, straddling the California-Nevada border, its a great place for outdoor enthusiasts year-round. In winter, it turns into the perfect place to ski, while in summer crystal-clear waters appear perfect for boating and hiking.
+                    </p>
                 </div>
             </div>
 
@@ -132,7 +122,7 @@
                         <img src="../Bilder/Disneland Restort img.jpg" alt="Disneyland Anaheim">
                     </a>
                     <h1>Disneyland Resort</h1>
-                    <p></p>
+                    <p>While in California why not visait Disneyland Resort located in Anaheim. Its a magical place for visitors of all ages. From entertaining shows to thrilling rides its a great destination year-round. </p>
                 </div>
             </div>
 
@@ -147,7 +137,7 @@
                         <img src="../Bilder/Big Sur img.jpg" alt="Big Sur">
                     </a>
                     <h1>Big Sur</h1>
-                    <p></p>
+                    <p>Big Sur, with its dramatic shoreline along the Pacific, is a high-quality region to experience the beauty of nature. The scenic drive alongside Highway 1 offers unforgettable views 12 months-round, from rugged cliffs to serene seashores. Whether you are trekking thru redwoods or watching the sunset over the sea, Big Sur’s natural beauty will captivate you.</p>
                 </div>
             </div>
 
@@ -157,7 +147,7 @@
                         <img src="../Bilder/Balboa Beach img.jpg" alt="San Diego Balboa Park">
                     </a>
                     <h1>San Diego Balboa Park</h1>
-                    <p></p>
+                    <p>San Diego is a vibrant coastal city acknowledged for its ideal climate and laid-returned appeal. It’s a exceptional vicinity for 12 months-spherical amusing, with lovely seashores, the well-known San Diego Zoo, and the sprawling Balboa Park. Whether you are browsing, on foot thru museums, or taking part in fresh seafood, San Diego offers some thing for all people.</p>
                 </div>
             </div>
 
@@ -172,7 +162,7 @@
                         <img src="../Bilder/santa barbara img.jpg" alt="Santa Barbara">
                     </a>
                     <h1>Santa Barbara</h1>
-                    <p></p>
+                    <p>Santa Barbara is known for its Mediterranean weather and scenic coastal perspectives. It’s a first-rate place to loosen up yr-spherical, with golden beaches, Spanish-fashion structure, and a nearby wine u . S . A .. Whether you’re on foot along the beach or exploring ancient landmarks, Santa Barbara is an excellent combo of culture and herbal beauty.</p>
                 </div>
             </div>
 
@@ -182,7 +172,7 @@
                         <img src="../Bilder/Sequoia and Kings Canyon National Parks img.jpg" alt="Sequoia and Kings Canyon National Parks">
                     </a>
                     <h1>Sequoia and Kings Canyon National Parks</h1>
-                    <p></p>
+                    <p>Sequoia and Kings Canyon National Parks are domestic to a number of the arena’s largest timber. It’s a amazing area for nature fanatics, offering trekking and tenting year-round. In summer time, the parks are best for exploring towering sequoias, even as iciness exhibits a non violent, snow-covered wonderland.</p>
                 </div>
             </div>
 
@@ -197,7 +187,7 @@
                         <img src="../Bilder/Palm Springs img.jpg" alt="Palm Springs">
                     </a>
                     <h1>Palm Springs</h1>
-                    <p></p>
+                    <p>Palm Springs is an oasis within the colourful desolate tract. Perfect for year-round rest and outside activities. Known for its luxury inns and mid-century current architecture. Perfect for relaxing by the pool or exploring close by Joshua Tree National Park. Whether you are enjoying a spa remedy or trekking within the desolate tract, Palm Springs is likewise a fashionable getaway.</p>
                 </div>
             </div>
 
@@ -207,7 +197,7 @@
                         <img src="../Bilder/Death Valley img.jpg" alt="Death Valley National Park">
                     </a>
                     <h1>Death Valley National Park</h1>
-                    <p></p>
+                    <p>Death Valley National Park is a hanging wasteland landscape, perfect for visitors who experience intense beauty. It’s a tremendous region to discover year-round, from the colorful badlands to the salt residences. Whether you’re hiking thru specific rock formations or stargazing at night time, Death Valley’s dramatic surroundings in no way disappoints.</p>
                 </div>
             </div>
 
