--- a/Engelsk Nettside/HTML/History.html
+++ b/Engelsk Nettside/HTML/History.html
@@ -17,11 +17,6 @@
             </li>
 
             <li id="button">               
-                <a href="Destinations.html">Destinations</a>
-                <div class="underline"></div>
-            </li>
-
-            <li id="button">               
                 <a href="Things to do.html">Things to do</a>
                 <div class="underline"></div>
             </li>
@@ -36,6 +31,56 @@
                 <div class="solid-underline"></div>
             </li>
 
+            <li id="button">
+                <a href="Sources.html">Sources</a>
+                <div class="underline"></div>
+            </li>
         </ul>
-
     </nav>
+
+
+    <section class="hero">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1>Timeline of Califonian History</h1>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+    <section class="timeline">
+        <div class="container left">
+            <div class="content">
+                <h2>Event 1</h2>
+                <p>Description of Event 1</p>
+            </div>
+        </div>
+
+        <div class="container right">
+            <div class="content">
+                <h2>Event 2</h2>
+                <p>Description of Event 2</p>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <h2>Event 3</h2>
+                <p>Description of Event 3</p>
+            </div>
+        </div>
+
+        <div class="container right">
+            <div class="content">
+                <h2>Event 4</h2>
+                <p>Description of Event 4</p>
+            </div>
+        </div>
+
+        <!-- Add more events as needed -->
+    </section>
+</body>
+</html>
