--- a/Engelsk Nettside/HTML/Things to do.html
+++ b/Engelsk Nettside/HTML/Things to do.html
@@ -17,11 +17,6 @@
             </li>
 
             <li id="button">               
-                <a href="Destinations.html">Destinations</a>
-                <div class="underline"></div>
-            </li>
-
-            <li id="button">               
                 <a href="#">Things to do</a>
                 <div class="solid-underline"></div>
             </li>
@@ -36,6 +31,9 @@
                 <div class="underline"></div>
             </li>
 
+            <li id="button">
+                <a href="Sources.html">Sources</a>
+                <div class="underline"></div>
+            </li>
         </ul>
-
     </nav>
