--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -20,11 +20,6 @@
             </li>
 
             <li id="button">               
-                <a href="HTML/Destinations.html">Destinations</a>
-                <div class="underline"></div>
-            </li>
-
-            <li id="button">               
                 <a href="HTML/Things to do.html">Things to do</a>
                 <div class="underline"></div>
             </li>
@@ -39,8 +34,11 @@
                 <div class="underline"></div>
             </li>
 
+            <li id="button">
+                <a href="HTML/Sources.html">Sources</a>
+                <div class="underline"></div>
+            </li>
         </ul>
-
     </nav>
 
 
@@ -51,7 +49,7 @@
                     <h1> Where Would <br> You Go?</h1>
                     <p>Endless possibilities</p>
                     <button class="button" id="hero-button">
-                        <a href="HTML/Plan you trip.html">Plan Now!</a>
+                        <a href="HTML/Plan Your Trip.html">Plan Now!</a>
                         <div id="translate"></div>
                     </button>
                 </div>
@@ -59,10 +57,5 @@
         </div>
         <img src="Bilder/alexey-komissarov-1MnkSfwtxRI-unsplash.jpg" alt="California Bridge">
     </div>
-
-
-
 </body>
-
-
 </html>
