--- a/Engelsk Nettside/HTML/History.html
+++ b/Engelsk Nettside/HTML/History.html
@@ -30,6 +30,11 @@
                 <a href="#">History</a>
                 <div class="solid-underline"></div>
             </li>
+            
+            <li id="button">
+                <a href="Info.html">Info</a>
+                <div class="underline"></div>
+            </li>
 
             <li id="button">
                 <a href="Sources.html">Sources</a>
@@ -54,15 +59,43 @@
     <section class="timeline">
         <div class="container left">
             <div class="content">
-                <h2>Event 1</h2>
-                <p>Description of Event 1</p>
+                <h2>1850 California Becomes the 31st State</h2>
+                <p>On September 9, 1850, California formally joined the USA as the 31st State. This rapid route to statehood became driven by way of the influx of people at some point in the Gold Rush, which greatly boosted California’s population and financial importance.</p>
             </div>
         </div>
 
         <div class="container right">
             <div class="content">
-                <h2>Event 2</h2>
-                <p>Description of Event 2</p>
+                <h2>1869 Completion of the Transcontinental Railroad</h2>
+                <p>The completion of the Transcontinental Railroad on May 10, 1869, connected California to the eastern United States revolutionizing trade and travel. This milestone spurred population growth, connected California’s agricultural financial system to the rest of the united states of america, and converted cities like Sacramento and San Francisco into key hubs.</p>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <h2>1906 San Francisco Earthquake</h2>
+                <p>On April 18, 1906, San Francisco was devastated by one of the most powerful earthquakes in U.S. History, estimated to be a magnetude of 7.9. The quake and following fires destroyed most of the city, killing hundreds and leaving nearly 300,000 people homeless.</p>
+            </div>
+        </div>
+
+        <div class="container right">
+            <div class="content">
+                <h2>1911 Women’s Suffrage in California</h2>
+                <p>California became the lead in women’s rights on October 10 1911, when they granted women the right to vote nearly a decade before the rest of the U.S.</p>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <h2>1923 The Hollywood Sign Built</h2>
+                <p>IIn 1923, the iconic Hollywood Sign was originally constructed as an advertisement for a real estate development called "Hollywoodland." Over time, the sign became a symbol of the burgeoning film industry and the cultural rise of Los Angeles as the entertainment capital of the world.</p>
+            </div>
+        </div>
+
+        <div class="container right">
+            <div class="content">
+                <h2>1937 Opening of the Golden Gate Bridge</h2>
+                <p>The Golden Gate Bridge Opens On May 27, 1937, the Golden Gate Bridge was completed, marking a major engineering achievement. Spanning the Golden Gate Strait, the bridge connected San Francisco to Marin County and rapidly became one of the most renowned landmarks in the world.</p>
             </div>
         </div>
 
@@ -80,7 +113,6 @@
             </div>
         </div>
 
-        <!-- Add more events as needed -->
     </section>
 </body>
 </html>
