--- a/Engelsk Nettside/HTML/Plan Your Trip.html
+++ b/Engelsk Nettside/HTML/Plan Your Trip.html
@@ -30,6 +30,12 @@
                 <a href="History.html">History</a>
                 <div class="underline"></div>
             </li>
+                        
+            <li id="button">
+                <a href="Info.html">Info</a>
+                <div class="underline"></div>
+            </li>
+
 
             <li id="button">
                 <a href="Sources.html">Sources</a>
