--- a/Engelsk Nettside/HTML/Sources.html
+++ b/Engelsk Nettside/HTML/Sources.html
@@ -30,6 +30,11 @@
                 <a href="History.html">History</a>
                 <div class="underline"></div>
             </li>
+            
+            <li id="button">
+                <a href="Info.html">Info</a>
+                <div class="underline"></div>
+            </li>
 
             <li id="button">
                 <a href="#">Sources</a>
@@ -53,11 +58,18 @@
             <a href="https://www.disneyland.com/">https://www.disneyland.com/</a><br>
             <a href="https://www.bigsurcalifornia.org/">https://www.bigsurcalifornia.org/</a><br>
             <a href="https://www.sandiego.org/">https://www.sandiego.org/</a><br>
-            <a href="https://www.sandiego.org/">https://www.sandiego.org/</a><br>
             <a href="https://www.deathvalleynationalpark.com/">https://www.deathvalleynationalpark.com/</a><br>
             <a href="https://santabarbaraca.com/">https://santabarbaraca.com/</a><br>
             <a href="https://www.sequoiaparksconservancy.org/">https://www.sequoiaparksconservancy.org/</a><br>
             <a href="https://visitpalmsprings.com/">https://visitpalmsprings.com/</a><br>
+            <a href="https://www.parks.ca.gov/?page_id=24644">https://www.parks.ca.gov/?page_id=24644</a><br>
+            <a href=""></a><br>
+            <a href=""></a><br>
+            <a href=""></a><br>
+            <a href=""></a><br>
+            <a href=""></a><br>
+            <a href=""></a><br>
+            <a href=""></a><br>
             <a href=""></a><br>
 
         </div>
