--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -33,6 +33,11 @@
                 <a href="HTML/History.html">History</a>
                 <div class="underline"></div>
             </li>
+                        
+            <li id="button">
+                <a href="Info.html">Info</a>
+                <div class="underline"></div>
+            </li>
 
             <li id="button">
                 <a href="HTML/Sources.html">Sources</a>
