--- a/Engelsk Nettside/HTML/Info.html
+++ b/Engelsk Nettside/HTML/Info.html
@@ -42,3 +42,16 @@
             </li>
         </ul>
     </nav>
+
+
+    <section class="state-animal">
+        <div class="box">
+            <img src="" alt="">
+            <div class="box-content">
+                <h2>California Grizzly Bear</h2>
+                <p></p>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
