--- a/Engelsk Nettside/HTML/Sources.html
+++ b/Engelsk Nettside/HTML/Sources.html
@@ -30,7 +30,7 @@
                 <a href="History.html">History</a>
                 <div class="underline"></div>
             </li>
-            
+
             <li id="button">
                 <a href="Info.html">Info</a>
                 <div class="underline"></div>
@@ -63,8 +63,16 @@
             <a href="https://www.sequoiaparksconservancy.org/">https://www.sequoiaparksconservancy.org/</a><br>
             <a href="https://visitpalmsprings.com/">https://visitpalmsprings.com/</a><br>
             <a href="https://www.parks.ca.gov/?page_id=24644">https://www.parks.ca.gov/?page_id=24644</a><br>
-            <a href=""></a><br>
-            <a href=""></a><br>
+            <a href="https://cdn.authentik.com/usa/uploads/images/orig/blog/visiter-death-valley-national-park.jpg">visiter-death-valley-national-park (23/09/24): https://cdn.authentik.com/usa/uploads/images/orig/blog/visiter-death-valley-national-park.jpg</a><br>
+            <a href="https://img.freepik.com/free-photo/aerial-shot-downtown-los-angeles-night_181624-26585.jpg">Los Angeles img: https://img.freepik.com/free-photo/aerial-shot-downtown-los-angeles-night_181624-26585.jpg</a><br>
+            <a href="https://pixabay.com/images/search/napa%20valley/">Nap Valley img: https://pixabay.com/images/search/napa%20valley/</a><br>
+            <a href="https://pixabay.com/images/search/lake%20tahoe/">Lake Taho img: https://pixabay.com/images/search/lake%20tahoe/</a><br>
+            <a href="https://www.pexels.com/photo/photo-of-castle-during-daytime-3411135/">Disneyland Resort img: https://www.pexels.com/photo/photo-of-castle-during-daytime-3411135/</a><br>
+            <a href="https://pixabay.com/images/search/big%20sur/">Big Sur img: https://pixabay.com/images/search/big%20sur/</a><br>
+            <a href="https://www.istockphoto.com/photos/balboa-park">Balboa Park img: https://www.istockphoto.com/photos/balboa-park</a><br>
+            <a href="Kings Canyon img: https://www.istockphoto.com/photos/sequoia-and-kings-canyon-national-park">Kings Canyon img: https://www.istockphoto.com/photos/sequoia-and-kings-canyon-national-park</a><br>
+            <a href="https://www.istockphoto.com/photos/palm-springs-california">Palm Springs img: https://www.istockphoto.com/photos/palm-springs-california</a><br>
+            <a href="https://www.shutterstock.com/search/death-valley">Death Valley img: https://www.shutterstock.com/search/death-valley</a><br>
             <a href=""></a><br>
             <a href=""></a><br>
             <a href=""></a><br>
