--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -35,7 +35,7 @@
             </li>
                         
             <li id="button">
-                <a href="Info.html">Info</a>
+                <a href="HTML/Info.html">Info</a>
                 <div class="underline"></div>
             </li>
 
