--- a/Engelsk Nettside/HTML/Historical Places.html
+++ b/Engelsk Nettside/HTML/Historical Places.html
@@ -32,8 +32,8 @@
             </li>
 
             <li id="button">
-                <a href="Info.html">Info</a>
-                <div class="solid-underline"></div>
+                <a href="Info.html">More</a>
+                <div class="underline"></div>
             </li>
 
             <li id="button">
