--- a/Engelsk Nettside/HTML/Info.html
+++ b/Engelsk Nettside/HTML/Info.html
@@ -32,7 +32,7 @@
             </li>
 
             <li id="button">
-                <a href="Info.html">Info</a>
+                <a href="Info.html">More</a>
                 <div class="solid-underline"></div>
             </li>
 
@@ -43,34 +43,41 @@
         </ul>
     </nav>
 
+   <div class="hero">
+        <div class="hero-underline">
+            <div class="hero-content">
+                <h1>More About California</h1>
+            </div>
+        </div>
+    </div>
     <section class="categorical">
 
         <div class="categorical-box">           
             <div class="box-content">
-                <img src="" alt="Image">
+                <img src="../Bilder/CaliFlower.jpg" alt="">
                 <h2>State Flower and Animal</h2>
                 <button class="button" id="catergorical-button">
-                    <a href="">Read More</a>
+                    <a href="State signature.html">Read More</a>
                 </button>
             </div>
         </div>
 
         <div class="categorical-box">
             <div class="box-content">
-                <img src="" alt="Image">
+                <img src="../Bilder/Did You Know.jpg" alt="Image">
                 <h2>Fun-Facts about California</h2>
                 <button class="button" id="catergorical-button">
-                    <a href="">Read More</a>
+                    <a href="Fun-Facts.html">Read More</a>
                 </button>
             </div>
         </div>
 
         <div class="categorical-box">
             <div class="box-content">
-                <img src="" alt="Image">
+                <img src="../Bilder/Alcatraz Island.jpg" alt="Image">
                 <h2>Historical Places</h2>
                 <button class="button" id="catergorical-button">
-                    <a href="">Read More</a>
+                    <a href="Historical Places.html">Read More</a>
                 </button>
             </div>
         </div>
