--- a/Engelsk Nettside/HTML/Plan Your Trip.html
+++ b/Engelsk Nettside/HTML/Plan Your Trip.html
@@ -32,7 +32,7 @@
             </li>
                         
             <li id="button">
-                <a href="Info.html">Info</a>
+                <a href="Info.html">More</a>
                 <div class="underline"></div>
             </li>
 
@@ -166,7 +166,7 @@
                         <img src="../Bilder/santa barbara img.jpg" alt="Santa Barbara">
                     </a>
                     <h1>Santa Barbara</h1>
-                    <p>Santa Barbara is known for its Mediterranean weather and scenic coastal perspectives. It’s a first-rate place to loosen up yr-spherical, with golden beaches, Spanish-fashion structure, and a nearby wine u . S . A .. Whether you’re on foot along the beach or exploring ancient landmarks, Santa Barbara is an excellent combo of culture and herbal beauty.</p>
+                    <p>Sequoia and Kings Canyon National Parks are domestic to a number of the arena’s largest timber. It’s a amazing area for nature fanatics, offering trekking and tenting year-round. In summer time, the parks are best for exploring towering sequoias, even as iciness exhibits a non violent, snow-covered wonderland.</p>
                 </div>
             </div>
 
