--- a/Engelsk Nettside/HTML/Things to do.html
+++ b/Engelsk Nettside/HTML/Things to do.html
@@ -32,7 +32,7 @@
             </li>
 
             <li id="button">
-                <a href="Info.html">Info</a>
+                <a href="Info.html">More</a>
                 <div class="underline"></div>
             </li>
 
