--- a/Engelsk Nettside/HTML/Sources.html
+++ b/Engelsk Nettside/HTML/Sources.html
@@ -32,7 +32,7 @@
             </li>
 
             <li id="button">
-                <a href="Info.html">Info</a>
+                <a href="Info.html">More</a>
                 <div class="underline"></div>
             </li>
 
@@ -46,39 +46,55 @@
 
 
 
-    <div class="hero"><h1>Sources</h1></div>
+    <div class="hero">
+        <h1>Sources</h1><br>
+        <p>This includes picture sources</p>
+    </div>
     <div class="sources-container">
         <div class="sources">
-            
-            <a href="https://www.yosemite.com/">https://www.yosemite.com/</a><br>
-            <a href="https://www.sftravel.com/">https://www.sftravel.com/</a><br>
-            <a href="https://www.visitnapavalley.com/">https://www.visitnapavalley.com/</a><br>
-            <a href="https://www.discoverlosangeles.com/">https://www.discoverlosangeles.com/</a><br>
-            <a href="https://www.visitlaketahoe.com/">https://www.visitlaketahoe.com/</a><br>
-            <a href="https://www.disneyland.com/">https://www.disneyland.com/</a><br>
-            <a href="https://www.bigsurcalifornia.org/">https://www.bigsurcalifornia.org/</a><br>
-            <a href="https://www.sandiego.org/">https://www.sandiego.org/</a><br>
-            <a href="https://www.deathvalleynationalpark.com/">https://www.deathvalleynationalpark.com/</a><br>
-            <a href="https://santabarbaraca.com/">https://santabarbaraca.com/</a><br>
-            <a href="https://www.sequoiaparksconservancy.org/">https://www.sequoiaparksconservancy.org/</a><br>
-            <a href="https://visitpalmsprings.com/">https://visitpalmsprings.com/</a><br>
-            <a href="https://www.parks.ca.gov/?page_id=24644">https://www.parks.ca.gov/?page_id=24644</a><br>
-            <a href="https://cdn.authentik.com/usa/uploads/images/orig/blog/visiter-death-valley-national-park.jpg">visiter-death-valley-national-park (23/09/24): https://cdn.authentik.com/usa/uploads/images/orig/blog/visiter-death-valley-national-park.jpg</a><br>
-            <a href="https://img.freepik.com/free-photo/aerial-shot-downtown-los-angeles-night_181624-26585.jpg">Los Angeles img: https://img.freepik.com/free-photo/aerial-shot-downtown-los-angeles-night_181624-26585.jpg</a><br>
-            <a href="https://pixabay.com/images/search/napa%20valley/">Nap Valley img: https://pixabay.com/images/search/napa%20valley/</a><br>
-            <a href="https://pixabay.com/images/search/lake%20tahoe/">Lake Taho img: https://pixabay.com/images/search/lake%20tahoe/</a><br>
-            <a href="https://www.pexels.com/photo/photo-of-castle-during-daytime-3411135/">Disneyland Resort img: https://www.pexels.com/photo/photo-of-castle-during-daytime-3411135/</a><br>
-            <a href="https://pixabay.com/images/search/big%20sur/">Big Sur img: https://pixabay.com/images/search/big%20sur/</a><br>
-            <a href="https://www.istockphoto.com/photos/balboa-park">Balboa Park img: https://www.istockphoto.com/photos/balboa-park</a><br>
-            <a href="Kings Canyon img: https://www.istockphoto.com/photos/sequoia-and-kings-canyon-national-park">Kings Canyon img: https://www.istockphoto.com/photos/sequoia-and-kings-canyon-national-park</a><br>
-            <a href="https://www.istockphoto.com/photos/palm-springs-california">Palm Springs img: https://www.istockphoto.com/photos/palm-springs-california</a><br>
-            <a href="https://www.shutterstock.com/search/death-valley">Death Valley img: https://www.shutterstock.com/search/death-valley</a><br>
-            <a href=""></a><br>
-            <a href=""></a><br>
-            <a href=""></a><br>
-            <a href=""></a><br>
-            <a href=""></a><br>
-            <a href=""></a><br>
-
+            <ul>
+                <li><a href="https://www.yosemite.com/">https://www.yosemite.com/</a></li>
+                <li><a href="https://www.sftravel.com/">https://www.sftravel.com/</a></li>
+                <li><a href="https://www.visitnapavalley.com/">https://www.visitnapavalley.com/</a></li>
+                <li><a href="https://www.discoverlosangeles.com/">https://www.discoverlosangeles.com/</a></li>
+                <li><a href="https://www.visitlaketahoe.com/">https://www.visitlaketahoe.com/</a></li>
+                <li><a href="https://www.disneyland.com/">https://www.disneyland.com/</a></li>
+                <li><a href="https://www.bigsurcalifornia.org/">https://www.bigsurcalifornia.org/</a></li>
+                <li><a href="https://www.sandiego.org/">https://www.sandiego.org/</a></li>
+                <li><a href="https://www.deathvalleynationalpark.com/">https://www.deathvalleynationalpark.com/</a></li>
+                <li><a href="https://santabarbaraca.com/">https://santabarbaraca.com/</a></li>
+                <li><a href="https://www.sequoiaparksconservancy.org/">https://www.sequoiaparksconservancy.org/</a></li>
+                <li><a href="https://visitpalmsprings.com/">https://visitpalmsprings.com/</a></li>
+                <li><a href="https://www.parks.ca.gov/?page_id=24644">https://www.parks.ca.gov/?page_id=24644</a></li>
+                <li><a href="https://cdn.authentik.com/usa/uploads/images/orig/blog/visiter-death-valley-national-park.jpg">visiter-death-valley-national-park (23/09/24): https://cdn.authentik.com/usa/uploads/images/orig/blog/visiter-death-valley-national-park.jpg</a></li>
+                <li><a href="https://img.freepik.com/free-photo/aerial-shot-downtown-los-angeles-night_181624-26585.jpg">Los Angeles img: https://img.freepik.com/free-photo/aerial-shot-downtown-los-angeles-night_181624-26585.jpg</a></li>
+                <li><a href="https://pixabay.com/images/search/napa%20valley/">Nap Valley img: https://pixabay.com/images/search/napa%20valley/</a></li>
+                <li><a href="https://pixabay.com/images/search/lake%20tahoe/">Lake Taho img: https://pixabay.com/images/search/lake%20tahoe/</a></li>
+                <li><a href="https://www.pexels.com/photo/photo-of-castle-during-daytime-3411135/">Disneyland Resort img: https://www.pexels.com/photo/photo-of-castle-during-daytime-3411135/</a></li>
+                <li><a href="https://pixabay.com/images/search/big%20sur/">Big Sur img: https://pixabay.com/images/search/big%20sur/</a></li>
+                <li><a href="https://www.istockphoto.com/photos/balboa-park">Balboa Park img: https://www.istockphoto.com/photos/balboa-park</a></li>
+                <li><a href="https://www.istockphoto.com/photos/sequoia-and-kings-canyon-national-park">Kings Canyon img: https://www.istockphoto.com/photos/sequoia-and-kings-canyon-national-park</a></li>
+                <li><a href="https://www.istockphoto.com/photos/palm-springs-california">Palm Springs img: https://www.istockphoto.com/photos/palm-springs-california</a></li>
+                <li><a href="https://www.shutterstock.com/search/death-valley">Death Valley img: https://www.shutterstock.com/search/death-valley</a></li>
+                <li><a href="https://statesymbolsusa.org/symbol-official-item/california/state-flower/california-poppy">https://statesymbolsusa.org/symbol-official-item/california/state-flower/california-poppy</a></li>
+                <li><a href="https://www.thespruce.com/how-to-grow-and-care-for-california-poppies-4686987">https://www.thespruce.com/how-to-grow-and-care-for-california-poppies-4686987</a></li>
+                <li><a href="https://learncalifornia.org/california-state-animals/">https://learncalifornia.org/california-state-animals/</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Alcatraz_Island">https://en.wikipedia.org/wiki/Alcatraz_Island</a></li>
+                <li><a href="https://www.freepik.com/free-vector/did-you-know-quiz-template-with-question-mark-sign_251189963.htm#query=fun%20facts&position=6&from_view=keyword&track=ais_hybrid&uuid=afe6c7e3-9709-41dd-ac60-1285fe46b4ff">https://www.freepik.com/free-vector/did-you-know-quiz-template-with-question-mark-sign_251189963.htm#query=fun%20facts&position=6&from_view=keyword&track=ais_hybrid&uuid=afe6c7e3-9709-41dd-ac60-1285fe46b4ff</a></li>
+                <li><a href="https://www.freepik.com/search?format=search&last_filter=selection&last_value=1&query=Forest+trees&selection=1">https://www.freepik.com/search?format=search&last_filter=selection&last_value=1&query=Forest+trees&selection=1</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/California_grizzly_bear">https://en.wikipedia.org/wiki/California_grizzly_bear</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Eschscholzia_californica">https://en.wikipedia.org/wiki/Eschscholzia_californica</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/History_of_California">https://en.wikipedia.org/wiki/History_of_California</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/California">https://en.wikipedia.org/wiki/California</a></li>
+                <li><a href="https://www.loc.gov/collections/california-first-person-narratives/articles-and-essays/early-california-history/">https://www.loc.gov/collections/california-first-person-narratives/articles-and-essays/early-california-history/</a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
         </div>
     </div>
