--- a/Engelsk Nettside/HTML/State signature.html
+++ b/Engelsk Nettside/HTML/State signature.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/Info.css">
+    <link rel="stylesheet" href="../CSS/State signature.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
    
     <title>Tourism</title>
@@ -32,8 +32,8 @@
             </li>
 
             <li id="button">
-                <a href="Info.html">Info</a>
-                <div class="solid-underline"></div>
+                <a href="Info.html">More</a>
+                <div class="underline"></div>
             </li>
 
             <li id="button">
@@ -42,3 +42,34 @@
             </li>
         </ul>
     </nav>
+
+    <div class="back">
+        <div class="back-container">
+            <div class="back-content">
+                <a href="Info.html"><h1> ← Back</h1></a>
+            </div>
+        </div>
+    </div>
+    <section class="card-colum">
+        <div class="card">
+            <div class="card-content">
+                <h2>California Grizzly Bear</h2>
+                <p>The California Grizzly Bear (Ursus arctos californicus) holds a special place in California's history and culture, symbolizing the state's wild and untamed spirit. Once roaming the diverse landscapes from coastal areas to mountain ranges, this majestic bear was known for its immense size and strength. Revered by Indigenous peoples, the grizzly became an iconic representation of California, featuring prominently on the state flag. Sadly, the California Grizzly was driven to extinction in the early 20th century due to habitat loss and hunting. Despite its disappearance, the bear continues to be celebrated as a symbol of resilience and the rugged beauty of California’s natural environment, reminding us of the state's rich wildlife heritage.</p>
+            </div>
+            <div class="card-image">
+                <img src="../Bilder/CaliBear.jpg" alt="Image 1">
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-content">
+                <h2>California Poppy</h2>
+                <p>The California Poppy (Eschscholzia californica), designated as the state flower in 1903, is renowned for its vibrant golden-orange blossoms that bloom across the state, particularly in spring. This resilient flower thrives in California's diverse ecosystems, often found in fields, along roadsides, and in gardens. The poppy's bright petals open in the sunlight and close at night, embodying the spirit of California's natural beauty and its connection to the landscape. The flower not only symbolizes the state's rich agricultural history but also serves as a reminder of the importance of preserving California's unique flora and fauna. The California Poppy is celebrated annually during California Poppy Day on April 6, drawing visitors to enjoy the stunning displays of color in various natural habitats across the state.</p>
+            </div>
+            <div class="card-image">
+                <img src="../Bilder/CaliFlower.jpg" alt="Image 2">
+            </div>
+        </div>
+    </section>
+</body>
+</html>
