--- a/Engelsk Nettside/HTML/Sources.html
+++ b/Engelsk Nettside/HTML/Sources.html
@@ -87,10 +87,10 @@
                 <li><a href="https://en.wikipedia.org/wiki/History_of_California">https://en.wikipedia.org/wiki/History_of_California</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/California">https://en.wikipedia.org/wiki/California</a></li>
                 <li><a href="https://www.loc.gov/collections/california-first-person-narratives/articles-and-essays/early-california-history/">https://www.loc.gov/collections/california-first-person-narratives/articles-and-essays/early-california-history/</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://www.hollywoodchamber.net/">https://www.hollywoodchamber.net/</a></li>
+                <li><a href="https://www.history.com/topics/inventions/internet">https://www.history.com/topics/inventions/internet</a></li>
+                <li><a href="https://www.nps.gov/seki/planyourvisit/giant-sequoias.htm">https://www.nps.gov/seki/planyourvisit/giant-sequoias.htm</a></li>
+                <li><a href="https://www.census.gov/quickfacts/fact/table/CA/PST045221">https://www.census.gov/quickfacts/fact/table/CA/PST045221</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
