--- a/Engelsk Nettside/HTML/Fun-Facts.html
+++ b/Engelsk Nettside/HTML/Fun-Facts.html
@@ -16,11 +16,6 @@
                 <div class="underline"></div>
             </li>
 
-            <li id="button">               
-                <a href="#">Things to do</a>
-                <div class="underline"></div>
-            </li>
-
             <li id="button">             
                 <a href="Plan Your Trip.html">Plan Your Trip</a>
                 <div class="underline"></div>
@@ -43,6 +38,14 @@
         </ul>
     </nav>
 
+    <div class="back">
+        <div class="back-container">
+            <div class="back-content">
+                <a href="Info.html"><h1> ← Back</h1></a>
+            </div>
+        </div>
+    </div>
+    
     <div class="hero">
         <div class="hero-container">
                 <h1 class="hero-content">Fun-facts about California!!!</h1>
