--- a/Engelsk Nettside/HTML/Sources.html
+++ b/Engelsk Nettside/HTML/Sources.html
@@ -15,12 +15,7 @@
                 <a href="../index.html">Home</a>
                 <div class="underline"></div>
             </li>
-
-            <li id="button">               
-                <a href="Things to do.html">Things to do</a>
-                <div class="underline"></div>
-            </li>
-
+            
             <li id="button">             
                 <a href="Plan Your Trip.html">Plan Your Trip</a>
                 <div class="underline"></div>
@@ -91,7 +86,7 @@
                 <li><a href="https://www.history.com/topics/inventions/internet">https://www.history.com/topics/inventions/internet</a></li>
                 <li><a href="https://www.nps.gov/seki/planyourvisit/giant-sequoias.htm">https://www.nps.gov/seki/planyourvisit/giant-sequoias.htm</a></li>
                 <li><a href="https://www.census.gov/quickfacts/fact/table/CA/PST045221">https://www.census.gov/quickfacts/fact/table/CA/PST045221</a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Big_Sur">https://en.wikipedia.org/wiki/Big_Sur</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
