--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -11,17 +11,14 @@
 <body>
     <nav>
         <ul>
-            <li>
-                <img src="Bilder/Cali Flag img.jpg" alt="">
+            <li id="button">
+                <a href="../index.html">Min Side</a>
+                <div class="underline"></div>
             </li>
+
             <li id="button">
                 <a href="#">Home</a>
                 <div class="solid-underline"></div>
-            </li>
-
-            <li id="button">               
-                <a href="HTML/Things to do.html">Things to do</a>
-                <div class="underline"></div>
             </li>
 
             <li id="button">             
@@ -43,6 +40,7 @@
                 <a href="HTML/Sources.html">Sources</a>
                 <div class="underline"></div>
             </li>
+
         </ul>
     </nav>
 
