--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -63,9 +63,9 @@
 
         <div class="Project-box">
             <div class="Project-content">
-                <a href="../CHAMBR/index.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
-                <h1>N/A</h1>
-                <p>N/A</p>
+                <a href="FotoSerie.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
+                <h1>Foto Serie</h1>
+                <p>Oppgave jeg hadde i historiefortelling</p>
             </div>
         </div>
 
