--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -79,9 +79,9 @@
 
         <div class="Project-box">
             <div class="Project-content">
-                <a href="#"><img src="" alt="Nothing here yet"></a>
-                <h1>Ingenting endå</h1>
-                <p>Filler</p>
+                <a href="JavaScript_feat_Bent.html"><img src="" alt="JavaScript_Picture"></a>
+                <h1>JavaScript</h1>
+                <p>Side med JS oppgaver</p>
             </div>
         </div>
 
