--- a/Min Side/FotoSerie.html
+++ b/Min Side/FotoSerie.html
@@ -11,16 +11,16 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="Min Side/Prosjekter.html">Prosjekter</a></li>
-            <li><a href="Min Side/Om Meg.html">Om</a></li>
+            <li><a href="../index.html">Hjem</a></li>
+            <li><a href="Prosjekter.html">Prosjekter</a></li>
+            <li><a href="Om Meg.html">Om</a></li>
             <li><a href="#">Word</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
                     <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
                     <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
-                    <li><a href="Min Side/bent.html">Bent</a></li>
+                    <li><a href="bent.html">Bent</a></li>
                 </ul>
             </li>
         </ul>
