--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prosjekter</title>
+    <link rel="stylesheet" href="CSS/JavaScript.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+    <script src="../JavaScript/JSmål_4_11.js" defer></script>
 
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Hjem</a></li>
+            <li><a href="Prosjekter.html">Prosjekter</a></li>
+            <li><a href="Om Meg.html">Om</a></li>
+            <li><a href="#">Word</a></li>
+            <li><a href="#">Ressurser/Hjelp</a> 
+                <ul class="dropdown">
+                    <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
+                    <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
+                    <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
+                    <li><a href="bent.html">Bent</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+
+    <section class="JS-Input">
+
+        <div class="box-pos">
+            <div class="box-frame">
+                <div class="box-ui-content">
+                    <input type="text" id="taskInput" placeholder="Enter new task">
+                    <button id="addTaskButton">Add Task</button>
+                    <button id="removeTaskButton">Remove Task</button>
+
+                </div>
+                <div class="box-content">
+                    <ul id="taskList"></ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="box-pos">
+            <div class="box-frame">
+                <div class="box-content">
+    
+                </div>
+            </div>
+        </div>
+
+        <div class="box-pos">
+            <div class="box-frame">
+                <div class="box-content">
+    
+                </div>
+            </div>
+        </div>
+
+    </section>
