--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/JavaScript.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <script src="../JavaScript/JSmål_4_11.js" defer></script>
+    <script src="../JavaScript/Løkker.js" defer></script>
 
 </head>
 <body>
@@ -15,7 +16,7 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="#">Word</a></li>
+            <li><a href="#">JavaScript</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -37,7 +38,7 @@
                     <button id="removeTaskButton">Remove Task</button>
 
                 </div>
-                <div class="box-content">
+                <div class="box-li-content">
                     <ul id="taskList"></ul>
                 </div>
             </div>
