--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -14,7 +14,7 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="#">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="#">Word</a></li>
+            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -79,25 +79,25 @@
 
         <div class="Project-box">
             <div class="Project-content">
-                <a href="JavaScript_feat_Bent.html"><img src="" alt="JavaScript_Picture"></a>
-                <h1>JavaScript</h1>
-                <p>Side med JS oppgaver</p>
+                <a href="#"><img src="" alt="Empty"></a>
+                <h1></h1>
+                <p></p>
             </div>
         </div>
 
         <div class="Project-box">
             <div class="Project-content">
-                <a href="#"><img src="" alt="Nothing here yet"></a>
-                <h1>Ingenting endå</h1>
-                <p>Filler</p>
+                <a href="#"><img src="" alt="Empty"></a>
+                <h1></h1>
+                <p></p>
             </div>
         </div>
 
         <div class="Project-box">
             <div class="Project-content">
-                <a href="#"><img src="" alt="Nothing here yet"></a>
-                <h1>Ingenting endå</h1>
-                <p>One Piece</p>
+                <a href="#"><img src="" alt="Empty"></a>
+                <h1></h1>
+                <p></p>
             </div>
         </div>
 
