--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -13,7 +13,7 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="#">Om</a></li>
-            <li><a href="#">Word</a></li>
+            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
