--- a/Min Side/FotoSerie.html
+++ b/Min Side/FotoSerie.html
@@ -26,7 +26,10 @@
         </ul>
     </nav>
 
-    <video src="Video/FotoSerie.mp4"></video>
+    <div class="fuckCSSdivcenter">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PahdXf6Jzf4?si=TFkdnF-Fe-Zg3g2n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  
 
     <section class="bilde-serie">
 
